<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AMazeByRichardBonett</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="application_title">ItzA Maze! ByRichardBonett</string>
    <string name="generation_algorithms_spinner_title">Generation Algorithm</string>
    <string name="operation_types_spinner_title">Operation Type</string>
    <string name="start_button_title">Start</string>
    <string name="load_button_title">Load</string>
    <string name="difficulty_seekbar_title">Difficulty</string>

    <string-array name="generation_algorithms">
        <item>Falstad</item>
        <item>Prim</item>
        <item>Kruskal</item>
    </string-array>
    <string-array name="operation_types">
        <item>Manual</item>
        <item>WallFollower</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="save_files">
        <item>Save 1</item>
        <item>Save 2</item>
        <item>Save 3</item>
        <item>Save 4</item>
        <item>Save 5</item>
        <item>Save 6</item>
    </string-array>

    <string name="title_activity_generating">GeneratingActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="dialog_load_file">Load File</string>
    <string name="cancel">Cancel</string>
    <string name="generation_progress">Progress</string>
    <string name="generation_title">Generating Maze</string>
    <string name="toggle_map">Toggle Map</string>
    <string name="toggle_solution">Toggle Solution</string>
    <string name="show_walls">Show Walls</string>
    <string name="save">Save</string>
    <string name="succeed">Succeed</string>
	<string name="fail">Fail</string>
	<string name="success">Success!</string>
	<string name="failure">Failure!</string>
	<string name="return_to_title">Return To Title</string>
	<string name="dialog_save_file">Save</string>
	<string name="dialog_settings">Settings</string>
	<string name="close">Close</string>
	<string name="energy_consumed">Energy Consumed: </string>
	<string name="path_length">Path Length: </string>
	<string name="time">Time: </string>
	<string name="imageButton_up">Move Forward</string>
	<string name="imageButton_down">Move Backward</string>
	<string name="imageButton_left">Move Left</string>
	<string name="imageButton_right">Move Right</string>
	<string name="start">Start</string>
	<string name="energy_bar_title">Remaining Energy</string>
	<string name="imageView_title_description">Itza Maze!</string>
	<string name="imageView_generating_description">Generating!</string>
	
</resources>
